[gd_scene load_steps=30 format=3 uid="uid://b8s5ljf5i3ial"]

[ext_resource type="Script" path="res://Scenes/battle/battle.gd" id="1_m242u"]
[ext_resource type="Texture2D" uid="uid://dx8kqu5td0a2k" path="res://MyArt/CityBG.png" id="1_yg6fg"]
[ext_resource type="PackedScene" uid="uid://cd1uh2272ir55" path="res://Scenes/enemy/enemy.tscn" id="2_67tir"]
[ext_resource type="Script" path="res://Scenes/ui/hand.gd" id="2_p2oto"]
[ext_resource type="PackedScene" uid="uid://dwptef8rjve07" path="res://Scenes/card_target_selector/card_target_selector.tscn" id="3_0rbyd"]
[ext_resource type="PackedScene" uid="uid://dpiyrjl8yy02g" path="res://Scenes/player/player.tscn" id="3_odyac"]
[ext_resource type="AudioStream" uid="uid://c4swgdextdcae" path="res://MyArt/Music/The_Caretaker_-_Its_Just_a_Burning_Memory_71392887.mp3" id="3_qfwov"]
[ext_resource type="Script" path="res://Scenes/enemy/enemy_handler.gd" id="4_j08wv"]
[ext_resource type="AudioStream" uid="uid://cjk5hgxycspsc" path="res://MyArt/SFX/Yay Kids Crowd - QuickSounds.com.mp3" id="4_myh51"]
[ext_resource type="Resource" uid="uid://f5e62susoc75" path="res://characters/gambler/gambler.tres" id="4_vepdf"]
[ext_resource type="Resource" uid="uid://lbjnveetsxnq" path="res://enemies/someguy/someguy_enemy.tres" id="5_ikp6x"]
[ext_resource type="Script" path="res://Scenes/ui/battle_ui.gd" id="7_6guhj"]
[ext_resource type="Script" path="res://Scenes/player/player_handler.gd" id="8_qrtca"]
[ext_resource type="Resource" uid="uid://cxnujmyr8xfsq" path="res://enemies/gerb/gerb_enemy.tres" id="8_w3h8i"]
[ext_resource type="PackedScene" uid="uid://cpl7xi537w35x" path="res://Scenes/ui/battle_over_panel.tscn" id="11_d7mvg"]
[ext_resource type="PackedScene" uid="uid://bsl1ihbq7htgr" path="res://Scenes/card_ui/mana_ui.tscn" id="11_i2cdr"]
[ext_resource type="PackedScene" uid="uid://dwh2o3qwvkg2j" path="res://Scenes/ui/tooltip.tscn" id="12_vnowo"]
[ext_resource type="Theme" uid="uid://dhwp1ukp16d5o" path="res://main_theme.tres" id="13_abu6y"]
[ext_resource type="Script" path="res://Scenes/ui/red_flash.gd" id="15_1ugup"]
[ext_resource type="PackedScene" uid="uid://qcymjo6febnv" path="res://Scenes/ui/card_pile_opener.tscn" id="18_fat3i"]
[ext_resource type="Texture2D" uid="uid://be5dsru3vmjnw" path="res://MyArt/discardpile.png" id="19_is2wv"]
[ext_resource type="PackedScene" uid="uid://c3cathy2dv6ch" path="res://Scenes/ui/card_pile_view.tscn" id="21_h0s6b"]
[ext_resource type="Shader" path="res://Scenes/run/scroll2.gdshader" id="22_awldy"]
[ext_resource type="Texture2D" uid="uid://bt4okcofpe616" path="res://MyArt/arrow.png" id="23_3wclw"]
[ext_resource type="Texture2D" uid="uid://wtx8vh0qdtwx" path="res://MyArt/WHEEL.png" id="24_xfbp3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qh4u7"]
size = Vector2(362, 150)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nygml"]
shader = ExtResource("22_awldy")

[sub_resource type="Gradient" id="Gradient_q2wwa"]
offsets = PackedFloat32Array(0, 0.256684, 0.483957, 0.574866, 0.671123, 1)
colors = PackedColorArray(0.572549, 0.694118, 0, 1, 0.745098, 0.682353, 0.254902, 1, 0.941176, 0.282353, 0.231373, 1, 0.984314, 0.690196, 0.960784, 1, 0.176471, 0.670588, 0.976471, 1, 0.301961, 0.835294, 0.14902, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ang80"]
gradient = SubResource("Gradient_q2wwa")
width = 4
height = 12
fill = 1
fill_from = Vector2(0.410256, 0.683761)
fill_to = Vector2(0.619658, 0.286325)
repeat = 2

[node name="Battle" type="Node2D"]
script = ExtResource("1_m242u")
char_stats = ExtResource("4_vepdf")
music = ExtResource("3_qfwov")
wheelsfx = ExtResource("4_myh51")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.290196, 0.290196, 0.290196, 1)
position = Vector2(180.9, 101.6)
scale = Vector2(1.41484, 1.42222)
texture = ExtResource("1_yg6fg")

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(181, 75)
shape = SubResource("RectangleShape2D_qh4u7")
debug_color = Color(0.877901, 0.240449, 0.614116, 0.117647)
metadata/_edit_lock_ = true

[node name="EnemyHandler" type="Node2D" parent="." groups=["enemyhandler"]]
script = ExtResource("4_j08wv")

[node name="GerbEnemy" parent="EnemyHandler" instance=ExtResource("2_67tir")]
position = Vector2(178, 77)
stats = ExtResource("8_w3h8i")

[node name="SomeguyEnemy" parent="EnemyHandler" instance=ExtResource("2_67tir")]
position = Vector2(240, 100)
stats = ExtResource("5_ikp6x")

[node name="SomeguyEnemy2" parent="EnemyHandler" instance=ExtResource("2_67tir")]
position = Vector2(298, 80)
stats = ExtResource("5_ikp6x")

[node name="Player" parent="." instance=ExtResource("3_odyac")]
position = Vector2(53, 83)
stats = ExtResource("4_vepdf")

[node name="CardTargetSelector" parent="." instance=ExtResource("3_0rbyd")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("8_qrtca")
hand = NodePath("../BattleUI/Hand")

[node name="BattleOverLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("11_d7mvg")]
visible = false

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("7_6guhj")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -35.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("2_p2oto")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("11_i2cdr")]
offset_top = -49.0
offset_bottom = -31.0
char_stats = ExtResource("4_vepdf")

[node name="Tooltip" parent="BattleUI" instance=ExtResource("12_vnowo")]
offset_top = 7.0
offset_bottom = 47.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -46.0
offset_right = -7.0
offset_bottom = -29.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("13_abu6y")
text = "End Turn"

[node name="WinButton" type="Button" parent="BattleUI"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
text = "WIN"

[node name="DrawPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("18_fat3i")]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -28.0
offset_right = 26.0
offset_bottom = -8.0
grow_vertical = 0
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DrawPileButton"]
layout_mode = 0
offset_left = 14.0
offset_top = 16.0
offset_right = 24.0
offset_bottom = 22.0
text = "99"
horizontal_alignment = 2

[node name="DiscardPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("18_fat3i")]
unique_name_in_owner = true
self_modulate = Color(0.470588, 0.470588, 0.470588, 1)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 332.0
offset_top = -28.0
offset_right = 352.0
offset_bottom = -8.0
grow_vertical = 0
texture_normal = ExtResource("19_is2wv")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DiscardPileButton"]
layout_mode = 0
offset_left = 14.0
offset_top = 16.0
offset_right = 24.0
offset_bottom = 22.0
text = "99"
horizontal_alignment = 2

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("15_1ugup")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.521569, 0.521569, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.1
one_shot = true

[node name="CardPileViews" type="CanvasLayer" parent="."]
layer = 4

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("21_h0s6b")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("21_h0s6b")]
unique_name_in_owner = true
visible = false

[node name="WheelLayer" type="CanvasLayer" parent="."]

[node name="WheelStuff" type="Control" parent="WheelLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 362.0
offset_bottom = 204.0

[node name="WheelBackground" type="TextureRect" parent="WheelLayer/WheelStuff"]
unique_name_in_owner = true
texture_repeat = 2
material = SubResource("ShaderMaterial_nygml")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ang80")
metadata/_edit_use_anchors_ = true

[node name="WheelPicker" type="TextureRect" parent="WheelLayer/WheelStuff"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -20.0
offset_right = -32.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
rotation = 1.5708
texture = ExtResource("23_3wclw")

[node name="Wheel" type="Sprite2D" parent="WheelLayer/WheelStuff"]
unique_name_in_owner = true
position = Vector2(180, 99)
texture = ExtResource("24_xfbp3")

[connection signal="pressed" from="BattleUI/WinButton" to="." method="_on_win_button_pressed"]
